--- a/FreeZoneAssist_Android/trunk/AndroidManifest.xml
+++ b/FreeZoneAssist_Android/trunk/AndroidManifest.xml
@@ -5,20 +5,20 @@
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.VIBRATE"/>
 	<application android:icon="@drawable/icon" android:label="@string/app_name">
-		<activity android:name=".FreeZoneAssist" android:label="@string/app_name">
+		<activity android:name=".FreeZoneAssist" android:label="@string/app_name" android:screenOrientation="portrait">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
 		<activity android:name=".About" android:label="@string/about_title"
-			android:theme="@android:style/Theme.Dialog">
+			android:theme="@android:style/Theme.Dialog" android:screenOrientation="portrait">
 		</activity>
-		<activity android:name=".Prefs" android:label="@string/settings_title">
+		<activity android:name=".Prefs" android:label="@string/settings_title" android:screenOrientation="portrait">
 		</activity>
-		<activity android:name=".SetSection" android:label="@string/set_section_title">
+		<activity android:name=".SetSection" android:label="@string/set_section_title" android:screenOrientation="portrait">
 		</activity>
-		<activity android:name=".SetDriver" android:label="@string/set_driver_title">
+		<activity android:name=".SetDriver" android:label="@string/set_driver_title" android:screenOrientation="portrait">
 		</activity>
 	</application>
 	<uses-sdk android:minSdkVersion="4" />
